--- a/backend/package.json
+++ b/backend/package.json
@@ -18,5 +18,8 @@
     "express": "^5.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
